improved code in ngit application